compiler/tests/en/errors/const_field_write.salam
// EXPECT: E013
struct P:
    pub x : int
end

func main:
    const p := P { x = 1 }
    p.x = 2
end
